sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: not found: value getNombreVariables
  for( i <- 0 to getNombreVariables()-1){
                 ^