sort.basic.selection.AlgSelectionSort.scala.code

def selectionSort() {
  var tampon = getValeur(0)
  var index = 0
  for( i <- 0 to getNombreVariables()-1){
    for(j <- i to getNombreVariables()-1){
      if(plusPetitQue(i,tampon)){
      	tampon= getValeur(i)
        index=j}
      	
     
    }
    echange(i,index)
    
  }
}